#342 #345 Small fix to ensure blank entries are saved. #339 fix up runtime creation with new test in C++ project.